src/test/deca/context/invalid/print_bool.deca
// Description:
//  Print d'un booleen
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Type is not String or Int or Float, you have boolean
//
// Historique:
//    cree le 06/01/2025

{   
   println(false);

}